[gd_scene load_steps=6 format=2]

[ext_resource path="res://Objects/PropertyContainer/AddConditionPopupMenu.gd" type="Script" id=1]
[ext_resource path="res://Objects/PropertyContainer/ConditionsVBoxContainer.gd" type="Script" id=2]
[ext_resource path="res://Objects/PropertyContainer/AddPropertyButton.gd" type="Script" id=3]
[ext_resource path="res://Objects/PropertyContainer/ColorPickerButton.gd" type="Script" id=4]
[ext_resource path="res://Objects/PropertyContainer/PropertyContainer.gd" type="Script" id=5]

[node name="PropertyContainer" type="VBoxContainer"]
margin_top = 34.0
margin_right = 168.0
margin_bottom = 79.0
script = ExtResource( 5 )

[node name="AddPropertyButton" type="MenuButton" parent="."]
margin_right = 168.0
margin_bottom = 20.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
toggle_mode = false
text = "add property"
expand_icon = true
script = ExtResource( 3 )

[node name="AddConditionPopupMenu" type="PopupMenu" parent="."]
margin_top = 24.0
margin_right = 168.0
margin_bottom = 44.0
script = ExtResource( 1 )

[node name="Properties" type="VBoxContainer" parent="."]
margin_top = 24.0
margin_right = 168.0
margin_bottom = 24.0

[node name="ColorPickerButton" type="ColorPickerButton" parent="Properties"]
visible = false
margin_right = 168.0
margin_bottom = 20.0
color = Color( 1, 1, 1, 1 )
script = ExtResource( 4 )

[node name="ConditionsVBoxContainer" type="VBoxContainer" parent="Properties"]
margin_right = 168.0
script = ExtResource( 2 )
